Fix header whitespace

--- a/css/host-helper.css
+++ b/css/host-helper.css
@@ -6,8 +6,9 @@ body {
 	width:80%;
 }
 h3 {
+	text-align: center;
   font-size:2em;
-  margin:0px;
+  margin: 0px 0px 15px 0px
 }
 
 /* Clock */
